// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`double wildcard recursively imports all members from a namespace and its children: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "AA",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "elements": [],
                    "target": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N4",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": true,
              "targetRef": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "elements": [],
                      "target": {
                        "$type": "Namespace",
                        "children": [
                          {
                            "$type": "OwningMembership",
                            "elements": [],
                            "target": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "AA",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                          {
                            "$type": "OwningMembership",
                            "elements": [],
                            "target": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "B",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                          {
                            "$type": "OwningMembership",
                            "elements": [],
                            "target": {
                              "$type": "Namespace",
                              "children": [
                                {
                                  "$type": "OwningMembership",
                                  "elements": [],
                                  "target": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "C",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                },
                              ],
                              "declaredName": "M",
                              "prefixes": [],
                            },
                          },
                        ],
                        "declaredName": "N4",
                        "prefixes": [],
                      },
                    },
                  },
                ],
              },
            },
          ],
          "declaredName": "N5",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": true,
              "targetRef": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "AA",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "elements": [],
                                "target": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "C",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                            "declaredName": "M",
                            "prefixes": [],
                          },
                        },
                      ],
                      "declaredName": "N4",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "D",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "N6",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`imported elements can be filtered: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Metaclass",
                "children": [],
                "declaredName": "Approved",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "Annotations",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "elements": [],
                    "target": {
                      "$type": "MetadataFeature",
                      "about": [],
                      "children": [],
                      "heritage": [
                        {
                          "$type": "FeatureTyping",
                          "elements": [],
                          "targetRef": {
                            "$type": "MetaclassReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Metaclass",
                                        "children": [],
                                        "declaredName": "Approved",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                  "declaredName": "Annotations",
                                  "prefixes": [],
                                },
                              },
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Metaclass",
                                  "children": [],
                                  "declaredName": "Approved",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                      ],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "NA",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Metaclass",
                            "children": [],
                            "declaredName": "Approved",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                      "declaredName": "Annotations",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "target": {
                "$type": "Package",
                "children": [
                  {
                    "$type": "NamespaceImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "targetRef": {
                      "$type": "NamespaceReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "elements": [],
                                "target": {
                                  "$type": "Class",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "MetadataFeature",
                                        "about": [],
                                        "children": [],
                                        "heritage": [
                                          {
                                            "$type": "FeatureTyping",
                                            "elements": [],
                                            "targetRef": {
                                              "$type": "MetaclassReference",
                                              "parts": [
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Namespace",
                                                    "children": [
                                                      {
                                                        "$type": "OwningMembership",
                                                        "elements": [],
                                                        "target": {
                                                          "$type": "Metaclass",
                                                          "children": [],
                                                          "declaredName": "Approved",
                                                          "heritage": [],
                                                          "isSufficient": false,
                                                          "prefixes": [],
                                                          "typeRelationships": [],
                                                        },
                                                      },
                                                    ],
                                                    "declaredName": "Annotations",
                                                    "prefixes": [],
                                                  },
                                                },
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Metaclass",
                                                    "children": [],
                                                    "declaredName": "Approved",
                                                    "heritage": [],
                                                    "isSufficient": false,
                                                    "prefixes": [],
                                                    "typeRelationships": [],
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        ],
                                        "isNonunique": false,
                                        "isOrdered": false,
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                  "declaredName": "A",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                            "declaredName": "NA",
                            "prefixes": [],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "$type": "ElementFilterMembership",
                    "elements": [],
                    "target": {
                      "$type": "OperatorExpression",
                      "children": [
                        {
                          "$type": "FeatureMembership",
                          "elements": [],
                          "target": {
                            "$type": "Feature",
                            "children": [],
                            "heritage": [
                              {
                                "$type": "FeatureTyping",
                                "elements": [],
                                "targetRef": {
                                  "$type": "TypeReference",
                                  "parts": [
                                    {
                                      "error": undefined,
                                      "ref": {
                                        "$type": "Metaclass",
                                        "children": [],
                                        "declaredName": "Approved",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                            "isNonunique": false,
                            "isOrdered": false,
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                      "heritage": [],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "operands": [
                        {
                          "$type": "FeatureReferenceExpression",
                          "children": [],
                          "expression": {
                            "$type": "ReturnParameterMembership",
                            "elements": [],
                            "target": {
                              "$type": "Feature",
                              "children": [],
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "prefixes": [],
                          "typeRelationships": [],
                        },
                      ],
                      "operator": "@",
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N8",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Metaclass",
                            "children": [],
                            "declaredName": "Approved",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                      "declaredName": "Annotations",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "target": {
                "$type": "Package",
                "children": [
                  {
                    "$type": "NamespaceImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "targetRef": {
                      "$type": "NamespaceReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "elements": [],
                                "target": {
                                  "$type": "Class",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "MetadataFeature",
                                        "about": [],
                                        "children": [],
                                        "heritage": [
                                          {
                                            "$type": "FeatureTyping",
                                            "elements": [],
                                            "targetRef": {
                                              "$type": "MetaclassReference",
                                              "parts": [
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Namespace",
                                                    "children": [
                                                      {
                                                        "$type": "OwningMembership",
                                                        "elements": [],
                                                        "target": {
                                                          "$type": "Metaclass",
                                                          "children": [],
                                                          "declaredName": "Approved",
                                                          "heritage": [],
                                                          "isSufficient": false,
                                                          "prefixes": [],
                                                          "typeRelationships": [],
                                                        },
                                                      },
                                                    ],
                                                    "declaredName": "Annotations",
                                                    "prefixes": [],
                                                  },
                                                },
                                                {
                                                  "error": undefined,
                                                  "ref": {
                                                    "$type": "Metaclass",
                                                    "children": [],
                                                    "declaredName": "Approved",
                                                    "heritage": [],
                                                    "isSufficient": false,
                                                    "prefixes": [],
                                                    "typeRelationships": [],
                                                  },
                                                },
                                              ],
                                            },
                                          },
                                        ],
                                        "isNonunique": false,
                                        "isOrdered": false,
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                  "declaredName": "A",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                            "declaredName": "NA",
                            "prefixes": [],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "$type": "ElementFilterMembership",
                    "elements": [],
                    "target": {
                      "$type": "OperatorExpression",
                      "children": [],
                      "heritage": [],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "operands": [
                        {
                          "$type": "OperatorExpression",
                          "children": [
                            {
                              "$type": "FeatureMembership",
                              "elements": [],
                              "target": {
                                "$type": "Feature",
                                "children": [],
                                "heritage": [
                                  {
                                    "$type": "FeatureTyping",
                                    "elements": [],
                                    "targetRef": {
                                      "$type": "TypeReference",
                                      "parts": [
                                        {
                                          "error": undefined,
                                          "ref": {
                                            "$type": "Metaclass",
                                            "children": [],
                                            "declaredName": "Approved",
                                            "heritage": [],
                                            "isSufficient": false,
                                            "prefixes": [],
                                            "typeRelationships": [],
                                          },
                                        },
                                      ],
                                    },
                                  },
                                ],
                                "isNonunique": false,
                                "isOrdered": false,
                                "isSufficient": false,
                                "prefixes": [],
                                "typeRelationships": [],
                              },
                            },
                          ],
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "operands": [
                            {
                              "$type": "FeatureReferenceExpression",
                              "children": [],
                              "expression": {
                                "$type": "ReturnParameterMembership",
                                "elements": [],
                                "target": {
                                  "$type": "Feature",
                                  "children": [],
                                  "heritage": [],
                                  "isNonunique": false,
                                  "isOrdered": false,
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          ],
                          "operator": "@",
                          "prefixes": [],
                          "typeRelationships": [],
                        },
                      ],
                      "operator": "not",
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N9",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespace members can be imported with qualified names: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                },
              ],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                            },
                          ],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "elements": [],
                      "target": {
                        "$type": "Class",
                        "children": [],
                        "declaredName": "A",
                        "heritage": [],
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  },
                ],
              },
            },
            {
              "$type": "MembershipImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                            },
                          ],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Membership",
                      "declaredName": "CCC",
                      "declaredShortName": "C",
                      "elements": [
                        {
                          "$type": "Annotation",
                          "elements": [],
                          "source": {
                            "$type": "Documentation",
                            "about": [],
                            "body": "/* alias doc */",
                          },
                        },
                      ],
                      "targetRef": {
                        "$type": "ElementReference",
                        "parts": [
                          {
                            "error": undefined,
                            "ref": {
                              "$type": "Class",
                              "children": [],
                              "declaredName": "B",
                              "heritage": [],
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                        ],
                      },
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "B",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "MembershipImport",
                    "elements": [],
                    "importsAll": false,
                    "isRecursive": false,
                    "targetRef": {
                      "$type": "MembershipReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Membership",
                            "declaredName": "CCC",
                            "declaredShortName": "C",
                            "elements": [
                              {
                                "$type": "Annotation",
                                "elements": [],
                                "source": {
                                  "$type": "Documentation",
                                  "about": [],
                                  "body": "/* alias doc */",
                                },
                              },
                            ],
                            "targetRef": {
                              "$type": "ElementReference",
                              "parts": [
                                {
                                  "error": undefined,
                                  "ref": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "B",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                },
                              ],
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N2",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`visibility affects the visibility of imported members: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                },
              ],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "AA",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Namespace",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "elements": [],
                    "target": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "declaredName": "M",
                "prefixes": [],
              },
            },
          ],
          "declaredName": "N4",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "MembershipImport",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Comment",
                    "about": [],
                    "body": "/* The imported membership is visible outside N7. */",
                  },
                },
              ],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "MembershipReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                            },
                          ],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "OwningMembership",
                      "elements": [],
                      "target": {
                        "$type": "Class",
                        "children": [],
                        "declaredName": "A",
                        "heritage": [],
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  },
                ],
              },
              "visibility": "public",
            },
            {
              "$type": "NamespaceImport",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* None of the imported memberships are visible
             * outside of N7. */",
                  },
                },
              ],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "AA",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Namespace",
                            "children": [
                              {
                                "$type": "OwningMembership",
                                "elements": [],
                                "target": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "C",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                            "declaredName": "M",
                            "prefixes": [],
                          },
                        },
                      ],
                      "declaredName": "N4",
                      "prefixes": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N7",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Feature",
          "children": [],
          "declaredName": "A",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "targetRef": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "MembershipImport",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Comment",
                                "about": [],
                                "body": "/* The imported membership is visible outside N7. */",
                              },
                            },
                          ],
                          "importsAll": false,
                          "isRecursive": false,
                          "targetRef": {
                            "$type": "MembershipReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "A",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "B",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                    {
                                      "$type": "Membership",
                                      "declaredName": "CCC",
                                      "declaredShortName": "C",
                                      "elements": [
                                        {
                                          "$type": "Annotation",
                                          "elements": [],
                                          "source": {
                                            "$type": "Documentation",
                                            "about": [],
                                            "body": "/* alias doc */",
                                          },
                                        },
                                      ],
                                      "targetRef": {
                                        "$type": "ElementReference",
                                        "parts": [
                                          {
                                            "error": undefined,
                                            "ref": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "B",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                          },
                                        ],
                                      },
                                    },
                                    {
                                      "$type": "Membership",
                                      "declaredName": "D",
                                      "elements": [],
                                      "targetRef": {
                                        "$type": "ElementReference",
                                        "parts": [
                                          {
                                            "error": undefined,
                                            "ref": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "B",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                          },
                                        ],
                                      },
                                      "visibility": "private",
                                    },
                                  ],
                                  "declaredName": "N1",
                                  "prefixes": [],
                                },
                              },
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "OwningMembership",
                                  "elements": [],
                                  "target": {
                                    "$type": "Class",
                                    "children": [],
                                    "declaredName": "A",
                                    "heritage": [],
                                    "isSufficient": false,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                },
                              },
                            ],
                          },
                          "visibility": "public",
                        },
                        {
                          "$type": "NamespaceImport",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* None of the imported memberships are visible
             * outside of N7. */",
                              },
                            },
                          ],
                          "importsAll": false,
                          "isRecursive": false,
                          "targetRef": {
                            "$type": "NamespaceReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Namespace",
                                  "children": [
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "AA",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Class",
                                        "children": [],
                                        "declaredName": "B",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                    {
                                      "$type": "OwningMembership",
                                      "elements": [],
                                      "target": {
                                        "$type": "Namespace",
                                        "children": [
                                          {
                                            "$type": "OwningMembership",
                                            "elements": [],
                                            "target": {
                                              "$type": "Class",
                                              "children": [],
                                              "declaredName": "C",
                                              "heritage": [],
                                              "isSufficient": false,
                                              "prefixes": [],
                                              "typeRelationships": [],
                                            },
                                          },
                                        ],
                                        "declaredName": "M",
                                        "prefixes": [],
                                      },
                                    },
                                  ],
                                  "declaredName": "N4",
                                  "prefixes": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N7",
                      "prefixes": [],
                    },
                  },
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "A",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`wildcard imports all public members from a namespace: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "elements": [],
                  "source": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                },
              ],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "NamespaceImport",
              "elements": [],
              "importsAll": false,
              "isRecursive": false,
              "targetRef": {
                "$type": "NamespaceReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Namespace",
                      "children": [
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "OwningMembership",
                          "elements": [],
                          "target": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "CCC",
                          "declaredShortName": "C",
                          "elements": [
                            {
                              "$type": "Annotation",
                              "elements": [],
                              "source": {
                                "$type": "Documentation",
                                "about": [],
                                "body": "/* alias doc */",
                              },
                            },
                          ],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "D",
                          "elements": [],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": {
                                  "$type": "Class",
                                  "children": [],
                                  "declaredName": "B",
                                  "heritage": [],
                                  "isSufficient": false,
                                  "prefixes": [],
                                  "typeRelationships": [],
                                },
                              },
                            ],
                          },
                          "visibility": "private",
                        },
                      ],
                      "declaredName": "N1",
                      "prefixes": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "D",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "E",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "B",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "N3",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
